# ZeroLink

./: CMakeLists.txt  DEVELOPMENT_LOG.md  LICENSE  README.md
client/: client_main.c
client/logic/: client_logic.c  client_logic.h
client/ui/: ui.c  ui.h
core/models/: chat_block.h  friend.h
core/storage/: database.h
server/: server_main.c
server/bootstrap/: bootstrap_server.c  bootstrap_server.h
